FIX: I fix the post and put because it shows the values bue didn't send the data
